--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         mx-auto mt-4 w-44 h-56 md:scale-105 lg:scale-150
         rounded-t-full shadow md:pb-10 md:mt-14 lg:mt-20
         ">
-            <img src="/src/img/poto.png" alt="FOTO" class="absolute -bottom-2 rounded-b-xl">
+            <img src="src/img/poto.png" alt="FOTO" class="absolute -bottom-2 rounded-b-xl">
         </div>
         </div>
     </div>
@@ -167,7 +167,7 @@
                     <!-- project 1 -->
                 <div class="flex md:w-[45%] w-72">
                 <div class="relative overflow-hidden group rounded-md bg-neutral-300 mb-5 pb-14">
-                    <img src="/src/img/mini-portfolio.png" alt="BacaQU" width="w-full">
+                    <img src="src/img/mini-portfolio.png" alt="BacaQU" width="w-full">
                     <div class="absolute bg-black bg-opacity-80 group-hover:bottom-0 -bottom-[137px] md:-bottom-[158px]  duration-300 w-full">
                         <h1 class="mx-4 font-bold text-lg text-orange-500 md:mb-6 mb-2 mt-5 ">Mini Portfolio</h1>
                         <hr>
@@ -179,7 +179,7 @@
                     <!-- project 2 -->
                 <div class="flex md:w-[45%] w-72">
                 <div class="relative overflow-hidden group rounded-md bg-neutral-300 mb-5 pb-14">
-                    <img src="/src/img/bacaqu.png" alt="BacaQU" width="w-full">
+                    <img src="src/img/bacaqu.png" alt="BacaQU" width="w-full">
                     <div class="absolute bg-black bg-opacity-80 group-hover:bottom-0 -bottom-40 md:-bottom-[162px]  duration-300 w-full">
                         <h1 class="mx-4 font-bold text-lg text-orange-500 md:mb-6 mb-1 mt-6">BacaQu</h1>
                         <hr>
@@ -192,7 +192,7 @@
                     <!-- project 3 -->
                 <div class="flex md:w-[45%] w-72">
                 <div class="relative overflow-hidden group rounded-md bg-neutral-300 mb-5 pb-10 ">
-                    <img src="/src/img/landing page.png" alt="b" width="w-full">
+                    <img src="src/img/landing page.png" alt="b" width="w-full">
                     <div class="absolute bg-black bg-opacity-80 group-hover:bottom-0 py-1 -bottom-[93px] md:-bottom-[118px] duration-300 w-full">
                         <h1 class="mx-4 font-bold text-lg text-orange-500 md:mb-6 mb-1 pt-1">Landing Page</h1>
                         <hr>
@@ -204,7 +204,7 @@
                     <!-- project 4 -->
                 <div class="flex md:w-[45%] w-72">
                 <div class="relative overflow-hidden group rounded-md bg-neutral-300 mb-5 pb-10 ">
-                    <img src="/src/img/kalkulator.png" alt="b" width="w-full">
+                    <img src="src/img/kalkulator.png" alt="b" width="w-full">
                     <div class="absolute bg-black bg-opacity-80 group-hover:bottom-0 -bottom-[135px] md:-bottom-[138px] duration-300 w-full">
                         <h1 class="mx-4 font-bold text-lg text-orange-500 md:mb-4 mb-1 pt-1.5">kalkulator Sederhana</h1>
                         <hr>
