--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
                     <div class="bg-orange-50 rounded-b-xl w-[200px] lg:w-40 relative -left-4 lg:-left-2">
                         <ul id="dropdown" class="hidden mt-6 py-1">
                             <li class="group mt-1">
-                                <a class=" group-hover:text-orange-500 py-1 rounded-lg mx-4 flex group-hover:bg-white px-2" href="https://cakson-portfolio.mdbgo.io/">Mini Portfolio</a>
+                                <a class=" group-hover:text-orange-500 py-1 rounded-lg mx-4 flex group-hover:bg-white px-2" href="https://alrescha79-cmd.github.io/aku/">Mini Portfolio</a>
                             </li>
                             <li class="group mt-1">
-                                <a class=" group-hover:text-orange-500 py-1 rounded-lg mx-4 flex group-hover:bg-white px-2" href="https://cakson-cv-bs.mdbgo.io/">Landing Page</a>
+                                <a class=" group-hover:text-orange-500 py-1 rounded-lg mx-4 flex group-hover:bg-white px-2" href="https://alrescha79-cmd.github.io/cv/">Landing Page</a>
                             </li>
                         </ul>
                     </div>
@@ -108,10 +108,10 @@
                     <div id="dropdown1" class="bg-orange-50 rounded-xl py-1 mt-1 hidden">
                         <ul  class="block">
                             <li class="group my-1">
-                                <a class="font-semibold group-hover:text-orange-500 group-hover:bg-slate-200 py-1 rounded-md flex mx-3 px-2" href="https://cakson-portfolio.mdbgo.io/">Mini Portfolio</a>
+                                <a class="font-semibold group-hover:text-orange-500 group-hover:bg-slate-200 py-1 rounded-md flex mx-3 px-2" href="https://alrescha79-cmd.github.io/aku/">Mini Portfolio</a>
                             </li><hr>
                             <li class="group my-1">
-                                <a class="font-semibold group-hover:text-orange-500 group-hover:bg-slate-200 py-1 rounded-md flex mx-3 px-2" href="https://cakson-cv-bs.mdbgo.io/">Landing Page</a>
+                                <a class="font-semibold group-hover:text-orange-500 group-hover:bg-slate-200 py-1 rounded-md flex mx-3 px-2" href="https://alrescha79-cmd.github.io/cv/">Landing Page</a>
                             </li><hr>
                             <li class="group my-1">
                                 <a class="font-semibold group-hover:text-orange-500  group-hover:bg-slate-200 py-1 rounded-md flex mx-3 px-2" href="#about">Ke Bawah ↓</a>
@@ -172,7 +172,7 @@
                         <h1 class="mx-4 font-bold text-lg text-orange-500 md:mb-6 mb-2 mt-5 ">Mini Portfolio</h1>
                         <hr>
                         <h1 class="mx-3 text-neutral-200 my-1 md:my-4">Mini Portfolio yang menggunakan desain glassmorphism. Yang berisi project dan skill.</h1>
-                        <a class="bg-orange-500 mb-2 md:mb-8 mx-5 flex text-white rounded-lg hover:bg-orange-200 hover:font-bold hover:text-orange-800 md:px-3" href="https://cakson-portfolio.mdbgo.io/" target="_blank"><span class="mx-auto flex gap-2"><box-icon name='link' class="fill-current"></box-icon>Lihat Selengkapnya</span></a>
+                        <a class="bg-orange-500 mb-2 md:mb-8 mx-5 flex text-white rounded-lg hover:bg-orange-200 hover:font-bold hover:text-orange-800 md:px-3" href="https://alrescha79-cmd.github.io/aku/" target="_blank"><span class="mx-auto flex gap-2"><box-icon name='link' class="fill-current"></box-icon>Lihat Selengkapnya</span></a>
                     </div>
                 </div>
                 </div>
@@ -380,10 +380,10 @@
                     <h3 class="mb-5 text-xl font-semibold text-orange-500">Lainnya</h3>
                     <ul class="text-slate-300">
                         <li>
-                            <a href="https://cakson-portfolio.mdbgo.io/" class="mb-3 inline-block text-base hover:text-orange-500">Mini Portfolio</a>
+                            <a href="https://alrescha79-cmd.github.io/aku/" class="mb-3 inline-block text-base hover:text-orange-500">Mini Portfolio</a>
                         </li>
                         <li>
-                            <a href="https://cakson-cv-bs.mdbgo.io/" class="mb-3 inline-block text-base hover:text-orange-500">Landing Page </a>
+                            <a href="https://alrescha79-cmd.github.io/cv/" class="mb-3 inline-block text-base hover:text-orange-500">Landing Page </a>
                         </li>
                     </ul>
                 </div>
