--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                         <h1 class="mx-4 font-bold text-lg text-orange-500 md:mb-6 mb-1 pt-1">Landing Page</h1>
                         <hr>
                         <h1 class="mx-3 text-neutral-200 my-1 md:my-4">Landing page menggunakan bootstrap 5.</h1>
-                        <a class="bg-orange-500 mb-2 md:mb-6 mx-5 flex text-white rounded-lg hover:bg-orange-200 hover:font-bold hover:text-orange-800 " href="https://alrescha79-cmd.github.io/cv" target="_blank"><span class="mx-auto flex gap-2"><box-icon name='link' class="fill-current"></box-icon>Lihat Selengkapnya</span></a>
+                        <a class="bg-orange-500 mb-2 md:mb-6 mx-5 flex text-white rounded-lg hover:bg-orange-200 hover:font-bold hover:text-orange-800 " href="https://alrescha79-cmd.github.io/cv/" target="_blank"><span class="mx-auto flex gap-2"><box-icon name='link' class="fill-current"></box-icon>Lihat Selengkapnya</span></a>
                     </div>
                 </div>
                 </div>
@@ -209,7 +209,7 @@
                         <h1 class="mx-4 font-bold text-lg text-orange-500 md:mb-4 mb-1 pt-1.5">kalkulator Sederhana</h1>
                         <hr>
                         <h1 class="mx-3 text-neutral-200 my-1 mt-1 md:mt-3 md:pt-2 md:my-4">kalkulator online yang menggunakan desain glassmorphism agar lebih menarik.</h1>
-                        <a class="bg-orange-500 mb-2 md:mb-6 mx-5 flex text-white rounded-lg hover:bg-orange-200 hover:font-bold hover:text-orange-800" href="https://alrescha79-cmd.github.io/kalkulator" target="_blank"><span class="mx-auto flex gap-2"><box-icon name='link' class="fill-current"></box-icon>Lihat Selengkapnya</span></a>
+                        <a class="bg-orange-500 mb-2 md:mb-6 mx-5 flex text-white rounded-lg hover:bg-orange-200 hover:font-bold hover:text-orange-800" href="https://alrescha79-cmd.github.io/kalkulator/" target="_blank"><span class="mx-auto flex gap-2"><box-icon name='link' class="fill-current"></box-icon>Lihat Selengkapnya</span></a>
                     </div>
                 </div>
                 </div>
