--- a/index.html
+++ b/index.html
@@ -90,15 +90,15 @@
 
     <div>
         <!-- hero start --> 
-    <div class="container pb-20 bg-slate-200 pt-36" id="home">
-        <div class="flex flex-wrap">
-        <div class="mx-4 md:mx-auto mt-8 self-center lg:scale-125">
+    <div class="pb-20 bg-slate-200 pt-36" id="home">
+        <div class="container flex flex-wrap">
+        <div class="mx-4 md:mx-auto mt-8 self-center lg:scale-125 lg:mt-28">
             <h1 class="text-orange-500 text-xl font-mono font-semibold ">Halo Semua, saya</h1>
             <h1 class="font-bold font-serif text-2xl">Anggun Caksono</h1>
             <h2 class="font-sans">Mahasiswa | Web Desain</h2>
             <h2 class="mt-4 font-light">Cari tahu apa yang bisa kami bantu untuk Anda.</h2>
             <div class="flex  gap-3 scale-75 md:scale-110 justify-center">
-                <a href="/src/CV-Anggun_Caksono.pdf" download="CV_Anggun_Caksono" class="mt-8 flex gap-2 w-40 h-10 outline outline-orange-500 hover:bg-orange-500 hover:text-white text-orange-500 font-semibold p-2 rounded-lg lg:scale-90"><box-icon type='solid' class="fill-current" name='file-pdf'></box-icon>Download CV</a>
+                <a href="/src/CV.pdf" download="CV_Anggun_Caksono" class="mt-8 flex gap-2 w-40 h-10 outline outline-orange-500 hover:bg-orange-500 hover:text-white text-orange-500 font-semibold p-2 rounded-lg lg:scale-90"><box-icon type='solid' class="fill-current" name='file-pdf'></box-icon>Download CV</a>
             <!-- <a href="#about" class="mt-8 block w-32 bg-orange-500 hover:bg-transparent hover:outline font-semibold hover:text-orange-500 hover:outline-orange-500 text-white p-2 rounded-lg lg:scale-90">Selengkapnya</a> -->
 
                 <!-- dropdow start -->
