--- a/index.html
+++ b/index.html
@@ -70,9 +70,15 @@
                         ▼</button>
                     <div class="bg-orange-50 rounded-b-xl w-[200px] lg:w-40 relative -left-4 lg:-left-2">
                         <ul id="dropdown" class="hidden mt-6 py-1">
+                            <!-- <li class="group mt-1">
+                                <a class=" group-hover:text-orange-500 py-1 rounded-lg mx-4 flex group-hover:bg-white px-2" href="https://cakson-portfolio.mdbgo.io/">Mini Portfolio</a>
+                            </li> -->
                             <li class="group mt-1">
                                 <a class=" group-hover:text-orange-500 py-1 rounded-lg mx-4 flex group-hover:bg-white px-2" href="https://alrescha79-cmd.github.io/aku/">Mini Portfolio</a>
                             </li>
+                            <!-- <li class="group mt-1">
+                                <a class=" group-hover:text-orange-500 py-1 rounded-lg mx-4 flex group-hover:bg-white px-2" href="https://cakson-cv-bs.mdbgo.io/">Landing Page</a>
+                            </li> -->
                             <li class="group mt-1">
                                 <a class=" group-hover:text-orange-500 py-1 rounded-lg mx-4 flex group-hover:bg-white px-2" href="https://alrescha79-cmd.github.io/cv/">Landing Page</a>
                             </li>
@@ -98,7 +104,7 @@
             <h2 class="font-sans">Mahasiswa | Web Desain</h2>
             <h2 class="mt-4 font-light">Cari tahu apa yang bisa kami bantu untuk Anda.</h2>
             <div class="flex  gap-3 scale-75 md:scale-110 justify-center">
-                <a href="/src/CV.pdf" download="CV_Anggun_Caksono" class="mt-8 flex gap-2 w-40 h-10 outline outline-orange-500 hover:bg-orange-500 hover:text-white text-orange-500 font-semibold p-2 rounded-lg lg:scale-90"><box-icon type='solid' class="fill-current" name='file-pdf'></box-icon>Download CV</a>
+                <a href="/src/CV-Final_Version.pdf" download="CV_Anggun_Caksono" class="mt-8 flex gap-2 w-40 h-10 outline outline-orange-500 hover:bg-orange-500 hover:text-white text-orange-500 font-semibold p-2 rounded-lg lg:scale-90"><box-icon type='solid' class="fill-current" name='file-pdf'></box-icon>Download CV</a>
             <!-- <a href="#about" class="mt-8 block w-32 bg-orange-500 hover:bg-transparent hover:outline font-semibold hover:text-orange-500 hover:outline-orange-500 text-white p-2 rounded-lg lg:scale-90">Selengkapnya</a> -->
 
                 <!-- dropdow start -->
@@ -110,9 +116,14 @@
                             <li class="group my-1">
                                 <a class="font-semibold group-hover:text-orange-500 group-hover:bg-slate-200 py-1 rounded-md flex mx-3 px-2" href="https://alrescha79-cmd.github.io/aku/">Mini Portfolio</a>
                             </li><hr>
+                            <!-- <li class="group my-1">
+                                <a class="font-semibold group-hover:text-orange-500 group-hover:bg-slate-200 py-1 rounded-md flex mx-3 px-2" href="https://cakson-portfolio.mdbgo.io/">Mini Portfolio</a>
+                            </li><hr> -->
                             <li class="group my-1">
                                 <a class="font-semibold group-hover:text-orange-500 group-hover:bg-slate-200 py-1 rounded-md flex mx-3 px-2" href="https://alrescha79-cmd.github.io/cv/">Landing Page</a>
                             </li><hr>
+                                <!-- <a class="font-semibold group-hover:text-orange-500 group-hover:bg-slate-200 py-1 rounded-md flex mx-3 px-2" href="https://cakson-cv-bs.mdbgo.io/">Landing Page</a>
+                            </li><hr> -->
                             <li class="group my-1">
                                 <a class="font-semibold group-hover:text-orange-500  group-hover:bg-slate-200 py-1 rounded-md flex mx-3 px-2" href="#about">Ke Bawah ↓</a>
                             </li>
@@ -173,6 +184,7 @@
                         <hr>
                         <h1 class="mx-3 text-neutral-200 my-1 md:my-4">Mini Portfolio yang menggunakan desain glassmorphism. Yang berisi project dan skill.</h1>
                         <a class="bg-orange-500 mb-2 md:mb-8 mx-5 flex text-white rounded-lg hover:bg-orange-200 hover:font-bold hover:text-orange-800 md:px-3" href="https://alrescha79-cmd.github.io/aku/" target="_blank"><span class="mx-auto flex gap-2"><box-icon name='link' class="fill-current"></box-icon>Lihat Selengkapnya</span></a>
+                        <!-- <a class="bg-orange-500 mb-2 md:mb-8 mx-5 flex text-white rounded-lg hover:bg-orange-200 hover:font-bold hover:text-orange-800 md:px-3" href="https://cakson-portfolio.mdbgo.io/" target="_blank"><span class="mx-auto flex gap-2"><box-icon name='link' class="fill-current"></box-icon>Lihat Selengkapnya</span></a> -->
                     </div>
                 </div>
                 </div>
@@ -186,6 +198,7 @@
                         <h1 class="mx-3 text-neutral-200 my-1 md:my-4">Alquran berbasis web yang mudah diakses
                         dimana saja, kapan saja dan di perangkat apa saja tanpa harus menginstall aplikasi.</h1>
                         <a class="bg-orange-500 mb-2 md:mb-8 mx-5 flex text-white rounded-lg hover:bg-orange-200 hover:font-bold hover:text-orange-800 md:px-3" href="https://alrescha79-cmd.github.io/quran/" target="_blank"><span class="mx-auto flex gap-2"><box-icon name='link' class="fill-current"></box-icon>Lihat Selengkapnya</span></a>
+                        <!-- <a class="bg-orange-500 mb-2 md:mb-8 mx-5 flex text-white rounded-lg hover:bg-orange-200 hover:font-bold hover:text-orange-800 md:px-3" href="https://cakson-bacaqu.mdbgo.io/" target="_blank"><span class="mx-auto flex gap-2"><box-icon name='link' class="fill-current"></box-icon>Lihat Selengkapnya</span></a> -->
                     </div>
                 </div>
                 </div>
@@ -198,6 +211,7 @@
                         <hr>
                         <h1 class="mx-3 text-neutral-200 my-1 md:my-4">Landing page menggunakan bootstrap 5.</h1>
                         <a class="bg-orange-500 mb-2 md:mb-6 mx-5 flex text-white rounded-lg hover:bg-orange-200 hover:font-bold hover:text-orange-800 " href="https://alrescha79-cmd.github.io/cv/" target="_blank"><span class="mx-auto flex gap-2"><box-icon name='link' class="fill-current"></box-icon>Lihat Selengkapnya</span></a>
+                        <!-- <a class="bg-orange-500 mb-2 md:mb-6 mx-5 flex text-white rounded-lg hover:bg-orange-200 hover:font-bold hover:text-orange-800 " href="https://cakson-cv-bs.mdbgo.io/" target="_blank"><span class="mx-auto flex gap-2"><box-icon name='link' class="fill-current"></box-icon>Lihat Selengkapnya</span></a> -->
                     </div>
                 </div>
                 </div>
@@ -210,6 +224,7 @@
                         <hr>
                         <h1 class="mx-3 text-neutral-200 my-1 mt-1 md:mt-3 md:pt-2 md:my-4">kalkulator online yang menggunakan desain glassmorphism agar lebih menarik.</h1>
                         <a class="bg-orange-500 mb-2 md:mb-6 mx-5 flex text-white rounded-lg hover:bg-orange-200 hover:font-bold hover:text-orange-800" href="https://alrescha79-cmd.github.io/kalkulator/" target="_blank"><span class="mx-auto flex gap-2"><box-icon name='link' class="fill-current"></box-icon>Lihat Selengkapnya</span></a>
+                        <!-- <a class="bg-orange-500 mb-2 md:mb-6 mx-5 flex text-white rounded-lg hover:bg-orange-200 hover:font-bold hover:text-orange-800" href="	https://cakson-kalkulator.mdbgo.io/" target="_blank"><span class="mx-auto flex gap-2"><box-icon name='link' class="fill-current"></box-icon>Lihat Selengkapnya</span></a> -->
                     </div>
                 </div>
                 </div>
@@ -382,9 +397,15 @@
                         <li>
                             <a href="https://alrescha79-cmd.github.io/aku/" class="mb-3 inline-block text-base hover:text-orange-500">Mini Portfolio</a>
                         </li>
+                        <!-- <li>
+                            <a href="https://cakson-portfolio.mdbgo.io/" class="mb-3 inline-block text-base hover:text-orange-500">Mini Portfolio</a>
+                        </li> -->
                         <li>
                             <a href="https://alrescha79-cmd.github.io/cv/" class="mb-3 inline-block text-base hover:text-orange-500">Landing Page </a>
                         </li>
+                        <!-- <li>
+                            <a href="https://cakson-cv-bs.mdbgo.io/" class="mb-3 inline-block text-base hover:text-orange-500">Landing Page </a>
+                        </li> -->
                     </ul>
                 </div>
                 <div class="mb-12 w-full px-4 md:w-1/3">
