--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <h2 class="font-sans">Mahasiswa | Web Desain</h2>
             <h2 class="mt-4 font-light">Cari tahu apa yang bisa kami bantu untuk Anda.</h2>
             <div class="flex  gap-3 scale-75 md:scale-110 justify-center">
-                <a href="/src/CV-Final_Version.pdf" download="CV_Anggun_Caksono" class="mt-8 flex gap-2 w-40 h-10 outline outline-orange-500 hover:bg-orange-500 hover:text-white text-orange-500 font-semibold p-2 rounded-lg lg:scale-90"><box-icon type='solid' class="fill-current" name='file-pdf'></box-icon>Download CV</a>
+                <a href="src/CV-Final_Version.pdf" download="CV_Anggun_Caksono" class="mt-8 flex gap-2 w-40 h-10 outline outline-orange-500 hover:bg-orange-500 hover:text-white text-orange-500 font-semibold p-2 rounded-lg lg:scale-90"><box-icon type='solid' class="fill-current" name='file-pdf'></box-icon>Download CV</a>
             <!-- <a href="#about" class="mt-8 block w-32 bg-orange-500 hover:bg-transparent hover:outline font-semibold hover:text-orange-500 hover:outline-orange-500 text-white p-2 rounded-lg lg:scale-90">Selengkapnya</a> -->
 
                 <!-- dropdow start -->
@@ -157,7 +157,7 @@
         <h1 class="font-light mt-1">Lebih dekat dengan kami dan lebih tau tentang kami. Jangan lupa ikuti sosial media kami.</h1>
         <div class="justify-center mt-3 flex gap-1 mb-4">
             <a class="flex w-9 h-9 justify-center items-center rounded-lg opacity-40 border border-orange-500 hover:opacity-100 hover:bg-orange-500 hover:text-white" href="https://www.instagram.com/alrescha79/"><box-icon type='logo' title="Instagram" name='instagram-alt' class="fill-current"></box-icon></a>
-            <a class="flex w-9 h-9 justify-center items-center rounded-lg opacity-40 border border-orange-500 hover:opacity-100 hover:bg-orange-500 hover:text-white" href="https://www.linkedin.com/in/anggun-caksono-6724b6237/"><box-icon name='linkedin-square' title="LinkedIn" type='logo' class="fill-current"></box-icon></a>
+            <a class="flex w-9 h-9 justify-center items-center rounded-lg opacity-40 border border-orange-500 hover:opacity-100 hover:bg-orange-500 hover:text-white" href="https://www.linkedin.com/in/angguncaksono"><box-icon name='linkedin-square' title="LinkedIn" type='logo' class="fill-current"></box-icon></a>
             <a class="flex w-9 h-9 justify-center items-center rounded-lg opacity-40 border border-orange-500 hover:opacity-100 hover:bg-orange-500 hover:text-white" href="https://github.com/alrescha79-cmd"><box-icon name='github' type='logo' title="Github" class="fill-current"></box-icon></a>
             <a class="flex w-9 h-9 justify-center items-center rounded-lg opacity-40 border border-orange-500 hover:opacity-100 hover:bg-orange-500 hover:text-white" href="https://t.me/megaBOTyt"><box-icon name='telegram' type='logo' title="Telegram" class="fill-current"></box-icon></a>
             <a class="flex w-9 h-9 justify-center items-center rounded-lg opacity-40 border border-orange-500 hover:opacity-100 hover:bg-orange-500 hover:text-white" href="https://www.facebook.com/anggun.caksono/"><box-icon name='facebook-circle' title="Facebook" type='logo' class="fill-current"></box-icon></a>
@@ -442,7 +442,7 @@
                         <box-icon type='logo' title="Instagram" name='instagram-alt' class="fill-current"></box-icon>
                     </a>
                     <a class="flex w-9 h-9 justify-center items-center rounded-lg opacity-40 border border-orange-500 hover:opacity-100 hover:bg-orange-500 hover:text-white"
-                        href="https://www.linkedin.com/in/anggun-caksono-6724b6237/">
+                        href="https://www.linkedin.com/in/angguncaksono">
                         <box-icon name='linkedin-square' title="LinkedIn" type='logo' class="fill-current"></box-icon>
                     </a>
                     <a class="flex w-9 h-9 justify-center items-center rounded-lg opacity-40 border border-orange-500 hover:opacity-100 hover:bg-orange-500 hover:text-white"
