--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                 <div class="relative w-96 h-72 overflow-hidden group-hover:h-96 duration-300 box-border">
                 <div class="absolute -bottom-[150px] group-hover:bottom-6 duration-300 group-hover:bg-slate-100 group-hover:shadow-md w-[360px] left-3 h-48 rounded-md box-border">
                     <h2 class="text-2xl font-bold text-orange-500 left-[122px] relative">Multitools</h2>
-                    <p class="p-4 block">Website multi fungsi, yang siap membantu berbagai kebutahan Anda secara mudah dan gratis.</p>
+                    <p class="p-4 block text-justify">Website multi fungsi, yang siap membantu berbagai kebutahan Anda secara mudah dan gratis.</p>
                     <a class="text-white text-lg px-8 py-3 bg-orange-500 relative left-20 rounded-lg hover:bg-orange-800 duration-200 shadow-md" href="http://multitools.me/" target="_blank" rel="noopener noreferrer">Selengkapnya</a>
                 </div>
             </div>
@@ -201,7 +201,7 @@
                 <div class="relative w-96 h-72 overflow-hidden group-hover:h-96 duration-300 box-border">
                 <div class="absolute -bottom-[150px] group-hover:bottom-6 duration-300 group-hover:bg-slate-100 group-hover:shadow-md w-[360px] left-3 h-48 rounded-md box-border">
                     <h2 class="text-2xl font-bold text-orange-500 left-[122px] relative">BacaQU</h2>
-                    <p class="p-4 block">Alquran berbasis web yang mudah diakses
+                    <p class="p-4 block text-justify">Alquran berbasis web yang mudah diakses
                         dimana saja, kapan saja dan di perangkat apa saja tanpa harus menginstall aplikasi.</p>
                     <a class="text-white text-lg px-8 py-3 bg-orange-500 relative left-20 rounded-lg hover:bg-orange-800 duration-200 shadow-md" href="http://multitools.me/bacaqu/" target="_blank" rel="noopener noreferrer">Selengkapnya</a>
                 </div>
@@ -218,7 +218,7 @@
                 <div class="relative w-96 h-72 overflow-hidden group-hover:h-96 duration-300 box-border">
                 <div class="absolute -bottom-[150px] group-hover:bottom-6 duration-300 group-hover:bg-slate-100 group-hover:shadow-md w-[360px] left-3 h-48 rounded-md box-border">
                     <h2 class="text-2xl font-bold text-orange-500 left-[122px] relative">Mini Portfolio</h2>
-                    <p class="p-4 block">Mini Portfolio yang menggunakan desain glassmorphism. Yang berisi project dan skill.</p>
+                    <p class="p-4 block text-justify">Mini Portfolio yang menggunakan desain glassmorphism. Yang berisi project dan skill.</p>
                     <a class="text-white text-lg px-8 py-3 bg-orange-500 relative left-20 rounded-lg hover:bg-orange-800 duration-200 shadow-md" href="http://multitools.me/aku/" target="_blank" rel="noopener noreferrer">Selengkapnya</a>
                 </div>
             </div>
@@ -234,7 +234,7 @@
                 <div class="relative w-96 h-72 overflow-hidden group-hover:h-96 duration-300 box-border">
                 <div class="absolute -bottom-[150px] group-hover:bottom-6 duration-300 group-hover:bg-slate-100 group-hover:shadow-md w-[360px] left-3 h-48 rounded-md box-border">
                     <h2 class="text-2xl font-bold text-orange-500 left-[122px] relative">kalkulator</h2>
-                    <p class="p-4 block">kalkulator online yang menggunakan desain glassmorphism agar lebih menarik.</p>
+                    <p class="p-4 block text-justify">kalkulator online yang menggunakan desain glassmorphism agar lebih menarik.</p>
                     <a class="text-white text-lg px-8 py-3 bg-orange-500 relative left-20 rounded-lg hover:bg-orange-800 duration-200 shadow-md" href="http://multitools.me/kalkulator/" target="_blank" rel="noopener noreferrer">Selengkapnya</a>
                 </div>
             </div>
@@ -250,7 +250,7 @@
                 <div class="relative w-96 h-72 overflow-hidden group-hover:h-96 duration-300 box-border">
                 <div class="absolute -bottom-[150px] group-hover:bottom-6 duration-300 group-hover:bg-slate-100 group-hover:shadow-md w-[360px] left-3 h-48 rounded-md box-border">
                     <h2 class="text-2xl font-bold text-orange-500 left-[122px] relative">LinkMe</h2>
-                    <p class="p-4 block">kalkulator online yang menggunakan desain glassmorphism agar lebih menarik.</p>
+                    <p class="p-4 block text-justify">Halaman yang berisi kumpulan link referensi berbagai sosial media.</p>
                     <a class="text-white text-lg px-8 py-3 bg-orange-500 relative left-20 rounded-lg hover:bg-orange-800 duration-200 shadow-md" href="http://multitools.me/linkme/" target="_blank" rel="noopener noreferrer">Selengkapnya</a>
                 </div>
             </div>
