--- a/index.html
+++ b/index.html
@@ -71,17 +71,11 @@
                     <div class="bg-orange-50 rounded-b-xl w-[200px] lg:w-40 relative -left-4 lg:-left-2">
                         <ul id="dropdown" class="hidden mt-6 py-1">
                             <li class="group mt-1">
-                                <a class=" group-hover:text-orange-500 py-1 rounded-lg mx-4 flex group-hover:bg-white px-2" href="https://cakson-portfolio.mdbgo.io/">Mini Portfolio</a>
-                            </li>
-                            <!-- <li class="group mt-1">
                                 <a class=" group-hover:text-orange-500 py-1 rounded-lg mx-4 flex group-hover:bg-white px-2" href="https://alrescha79-cmd.github.io/aku/">Mini Portfolio</a>
-                            </li> -->
-                            <li class="group mt-1">
-                                <a class=" group-hover:text-orange-500 py-1 rounded-lg mx-4 flex group-hover:bg-white px-2" href="https://cakson-cv-bs.mdbgo.io/">Landing Page</a>
                             </li>
-                            <!-- <li class="group mt-1">
+                            <li class="group mt-1">
                                 <a class=" group-hover:text-orange-500 py-1 rounded-lg mx-4 flex group-hover:bg-white px-2" href="https://alrescha79-cmd.github.io/cv/">Landing Page</a>
-                            </li> -->
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -113,17 +107,11 @@
                         class="text-white bg-orange-500 hover:bg-orange-700 rounded-t-lg rounded-b-lg px-2.5 py-2">Selengkapnya ▼</button>
                     <div id="dropdown1" class="bg-orange-50 rounded-xl py-1 mt-1 hidden">
                         <ul  class="block">
-                            <!-- <li class="group my-1">
-                                <a class="font-semibold group-hover:text-orange-500 group-hover:bg-slate-200 py-1 rounded-md flex mx-3 px-2" href="https://alrescha79-cmd.github.io/aku/">Mini Portfolio</a>
-                            </li><hr> -->
                             <li class="group my-1">
-                                <a class="font-semibold group-hover:text-orange-500 group-hover:bg-slate-200 py-1 rounded-md flex mx-3 px-2" href="https://cakson-portfolio.mdbgo.io/">Mini Portfolio</a>
+                                <a class="font-semibold group-hover:text-orange-500 group-hover:bg-slate-200 py-1 rounded-md flex mx-3 px-2" href="https://alrescha79-cmd.github.io/aku/">Mini Portfolio</a>
                             </li><hr>
-                            <!-- <li class="group my-1">
+                            <li class="group my-1">
                                 <a class="font-semibold group-hover:text-orange-500 group-hover:bg-slate-200 py-1 rounded-md flex mx-3 px-2" href="https://alrescha79-cmd.github.io/cv/">Landing Page</a>
-                            </li><hr> -->
-                                <a class="font-semibold group-hover:text-orange-500 group-hover:bg-slate-200 py-1 rounded-md flex mx-3 px-2" href="https://cakson-cv-bs.mdbgo.io/">Landing Page</a>
-                            </li><hr>
                             <li class="group my-1">
                                 <a class="font-semibold group-hover:text-orange-500  group-hover:bg-slate-200 py-1 rounded-md flex mx-3 px-2" href="#about">Ke Bawah ↓</a>
                             </li>
@@ -420,17 +408,11 @@
                 <div class="mb-12 w-full px-4 md:w-1/3">
                     <h3 class="mb-5 text-xl font-semibold text-orange-500">Lainnya</h3>
                     <ul class="text-slate-300">
-                        <!-- <li>
+                        <li>
                             <a href="https://alrescha79-cmd.github.io/aku/" class="mb-3 inline-block text-base hover:text-orange-500">Mini Portfolio</a>
-                        </li> -->
-                        <li>
-                            <a href="https://cakson-portfolio.mdbgo.io/" class="mb-3 inline-block text-base hover:text-orange-500">Mini Portfolio</a>
                         </li>
-                        <!-- <li>
-                            <a href="https://alrescha79-cmd.github.io/cv/" class="mb-3 inline-block text-base hover:text-orange-500">Landing Page </a>
-                        </li> -->
                         <li>
-                            <a href="https://cakson-cv-bs.mdbgo.io/" class="mb-3 inline-block text-base hover:text-orange-500">Landing Page </a>
+                            <a href="https://alrescha79-cmd.github.io/cv/" class="mb-3 inline-block text-base hover:text-orange-500">Landing Page </a>
                         </li>
                     </ul>
                 </div>
